# World-Cup-2026-Prediction

./: .nojekyll  01_eda.ipynb  02_model_training.html  02_model_training.ipynb  03_knockout_simulation.ipynb  LICENSE  README.md  _quarto.yml  index.html  pyproject.toml
_site/: 01_eda.html  02_model_training.html  03_knockout_simulation.html  search.json
data/processed/: matches_features.csv  metadata.json  upcoming_matches.csv
data/reference/: group_letters.csv  later_rounds_skeleton.csv  r32_combinations.csv  r32_skeleton.csv
scripts/: smoke_notebooks.py  validate_repo.py
src/wc2026_predictor/: __init__.py  config.py  features.py  modeling.py  simulation.py
tests/: test_core_logic.py
