[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wc2026-predictor"
version = "0.1.0"
description = "Portfolio-ready World Cup 2026 prediction model with Elo, temporal validation, Poisson scoring, and Monte Carlo simulation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "jupyter>=1.1",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
